--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
 body {background-color: lightblue;}
 	    h2 {color: green;
-	    	text-align: center;}
+	    	text-align: center;
+background-color: black;
+}
 	    	.martinfirst {background-color: orange;
 	    		width: 47%;
 	    		display: inline-block;
