--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 body {background-color: lightblue;}
 	    h2 {color: green;
 	    	text-align: center;
-background-color: black;
 }
 	    	.martinfirst {background-color: orange;
 	    		width: 47%;
@@ -21,5 +20,8 @@ background-color: black;
 	    	}
 .Lesson{
 background-color: black;
-	
+}
+.NET{
+color: green ;
+background-color: black;
 }
