--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ body {background-color: lightblue;}
 
 	    	}
 .Lesson{
-background-color: black;
+background-color: yellow;
 }
 .NET{
 color: green ;
